Remove deprecated GC_TUNE option UseParNewGC from startup in sunspot_solr